test/tests/compiler/18_structures/invalid_parse/struct_decl_empty_member_list.plx
# struct member list cannot be empty
# (note that GCC/Clang allow this as an extenision)
type struc s()

pub fn main(none) i32 {
    return 0
}
